--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-load": "^1.1.16",
     "mysql": "^2.15.0"
   },
   "devDependencies": {
