--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "consign": "^0.1.6",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "express-load": "^1.1.16",
     "express-validator": "^4.3.0",
     "mysql": "^2.15.0"
   },
